--- a/timetable_project/timetable.html
+++ b/timetable_project/timetable.html
@@ -40,473 +40,132 @@
         // Replace this with the actual JSON data from your Python script
         const timetableData =[
     {
-        "professor": "ALAOUI FDILI",
+        "professor": "Baioumy",
         "module": "Systèmes d’exploitation",
         "group": 1,
-        "day": "Friday",
-        "time": "14:00-16:00"
+        "day": "Lundi",
+        "time": "08:30-10:30",
+        "room": "Salle TP"
     },
     {
-        "professor": "ALAOUI FDILI",
-        "module": "Systèmes d’exploitation",
-        "group": 2,
-        "day": "Friday",
-        "time": "16:00-18:00"
-    },
-    {
-        "professor": "ALAOUI FDILI",
-        "module": "Systèmes d’exploitation",
-        "group": 2,
-        "day": "Thursday",
-        "time": "10:00-12:00"
-    },
-    {
-        "professor": "ALAOUI FDILI",
-        "module": "Systèmes d’exploitation",
-        "group": 1,
-        "day": "Monday",
-        "time": "10:00-12:00"
-    },
-    {
-        "professor": "ESSALIH",
-        "module": "Réseaux informatiques",
-        "group": 2,
-        "day": "Wednesday",
-        "time": "14:00-16:00"
-    },
-    {
-        "professor": "ESSALIH",
-        "module": "Réseaux informatiques",
-        "group": 1,
-        "day": "Tuesday",
-        "time": "14:00-16:00"
-    },
-    {
-        "professor": "MOUNIR",
-        "module": "Analyse numérique",
-        "group": 2,
-        "day": "Monday",
-        "time": "10:00-12:00"
-    },
-    {
-        "professor": "MOUNIR",
-        "module": "Analyse numérique",
-        "group": 2,
-        "day": "Thursday",
-        "time": "08:00-10:00"
-    },
-    {
-        "professor": "ESSALIH",
-        "module": "Réseaux informatiques",
-        "group": 3,
-        "day": "Friday",
-        "time": "14:00-16:00"
-    },
-    {
-        "professor": "ESSALIH",
-        "module": "Réseaux informatiques",
-        "group": 2,
-        "day": "Thursday",
-        "time": "14:00-16:00"
-    },
-    {
-        "professor": "ESSALIH",
-        "module": "Réseaux informatiques",
-        "group": 2,
-        "day": "Wednesday",
-        "time": "16:00-18:00"
-    },
-    {
-        "professor": "ESSALIH",
-        "module": "Réseaux informatiques",
-        "group": 2,
-        "day": "Friday",
-        "time": "14:00-16:00"
-    },
-    {
-        "professor": "ALAOUI FDILI",
-        "module": "Systèmes d’exploitation",
-        "group": 1,
-        "day": "Friday",
-        "time": "14:00-16:00"
-    },
-    {
-        "professor": "ALAOUI FDILI",
-        "module": "Systèmes d’exploitation",
-        "group": 1,
-        "day": "Monday",
-        "time": "08:00-10:00"
-    },
-    {
-        "professor": "ALAOUI FDILI",
-        "module": "Systèmes d’exploitation",
-        "group": 1,
-        "day": "Friday",
-        "time": "14:00-16:00"
-    },
-    {
-        "professor": "ALAOUI FDILI",
-        "module": "Systèmes d’exploitation",
-        "group": 3,
-        "day": "Monday",
-        "time": "16:00-18:00"
-    },
-    {
-        "professor": "MOUNIR",
+        "professor": "Aouaj",
         "module": "Analyse numérique",
         "group": 3,
-        "day": "Thursday",
-        "time": "10:00-12:00"
-    },
-    {
-        "professor": "MOUNIR",
-        "module": "Analyse numérique",
-        "group": 3,
-        "day": "Thursday",
-        "time": "08:00-10:00"
+        "day": "Mercredi",
+        "time": "08:30-10:30",
+        "room": "Mini-Amphi"
     },
     {
         "professor": "Maarouf",
         "module": "Réseaux informatiques",
         "group": 3,
-        "day": "Friday",
-        "time": "16:00-18:00"
+        "day": "Lundi",
+        "time": "08:30-10:30",
+        "room": "Salle TP"
     },
     {
         "professor": "Maarouf",
         "module": "Réseaux informatiques",
         "group": 1,
-        "day": "Wednesday",
-        "time": "16:00-18:00"
+        "day": "Lundi",
+        "time": "08:30-10:30",
+        "room": "Salle TP"
     },
     {
         "professor": "Maarouf",
         "module": "Analyse numérique",
         "group": 1,
-        "day": "Monday",
-        "time": "10:00-12:00"
-    },
-    {
-        "professor": "MOUNIR",
-        "module": "Analyse numérique",
-        "group": 1,
-        "day": "Friday",
-        "time": "16:00-18:00"
-    },
-    {
-        "professor": "ALAOUI FDILI",
-        "module": "Systèmes d’exploitation",
-        "group": 3,
-        "day": "Thursday",
-        "time": "14:00-16:00"
+        "day": "Lundi",
+        "time": "08:30-10:30",
+        "room": "Salle TP"
     },
     {
         "professor": "hourri",
         "module": "Administration Réseau",
         "group": 2,
-        "day": "Friday",
-        "time": "10:00-12:00"
+        "day": "Lundi",
+        "time": "08:30-10:30",
+        "room": "Amphi"
     },
     {
         "professor": "hourri",
         "module": "Administration Réseau",
         "group": 3,
-        "day": "Thursday",
-        "time": "16:00-18:00"
+        "day": "Lundi",
+        "time": "08:30-10:30",
+        "room": "Amphi"
     },
     {
         "professor": "hourri",
         "module": "Administration Réseau",
         "group": 3,
-        "day": "Thursday",
-        "time": "08:00-10:00"
-    },
-    {
-        "professor": "CHEKRY",
-        "module": "algorithme",
-        "group": 3,
-        "day": "Monday",
-        "time": "10:00-12:00"
-    },
-    {
-        "professor": "CHEKRY",
-        "module": "algorithme",
-        "group": 4,
-        "day": "Friday",
-        "time": "10:00-12:00"
-    },
-    {
-        "professor": "CHEKRY",
-        "module": "algorithme",
-        "group": 2,
-        "day": "Tuesday",
-        "time": "10:00-12:00"
-    },
-    {
-        "professor": "ARHID",
-        "module": "Architecture et programmation assembleur",
-        "group": 1,
-        "day": "Tuesday",
-        "time": "14:00-16:00"
-    },
-    {
-        "professor": "ARHID",
-        "module": "Architecture et programmation assembleur",
-        "group": 2,
-        "day": "Monday",
-        "time": "14:00-16:00"
-    },
-    {
-        "professor": "ARHID",
-        "module": "Architecture et programmation assembleur",
-        "group": 3,
-        "day": "Monday",
-        "time": "14:00-16:00"
-    },
-    {
-        "professor": "ARHID",
-        "module": "Architecture et programmation assembleur",
-        "group": 4,
-        "day": "Monday",
-        "time": "16:00-18:00"
-    },
-    {
-        "professor": "ARHID",
-        "module": "Architecture et programmation assembleur",
-        "group": 1,
-        "day": "Friday",
-        "time": "10:00-12:00"
-    },
-    {
-        "professor": "ARHID",
-        "module": "Architecture et programmation assembleur",
-        "group": 2,
-        "day": "Thursday",
-        "time": "10:00-12:00"
-    },
-    {
-        "professor": "ARHID",
-        "module": "Architecture et programmation assembleur",
-        "group": 3,
-        "day": "Monday",
-        "time": "16:00-18:00"
-    },
-    {
-        "professor": "ARHID",
-        "module": "Architecture et programmation assembleur",
-        "group": 4,
-        "day": "Monday",
-        "time": "10:00-12:00"
-    },
-    {
-        "professor": "CHEKRY",
-        "module": "algorithme",
-        "group": 4,
-        "day": "Thursday",
-        "time": "16:00-18:00"
-    },
-    {
-        "professor": "CHEKRY",
-        "module": "algorithme",
-        "group": 1,
-        "day": "Monday",
-        "time": "14:00-16:00"
-    },
-    {
-        "professor": "CHEKRY",
-        "module": "algorithme",
-        "group": 1,
-        "day": "Tuesday",
-        "time": "14:00-16:00"
-    },
-    {
-        "professor": "CHEKRY",
-        "module": "algorithme",
-        "group": 2,
-        "day": "Friday",
-        "time": "10:00-12:00"
-    },
-    {
-        "professor": "CHEKRY",
-        "module": "algorithme",
-        "group": 3,
-        "day": "Thursday",
-        "time": "16:00-18:00"
+        "day": "Lundi",
+        "time": "08:30-10:30",
+        "room": "Amphi"
     },
     {
         "professor": "hourri",
         "module": "Administration Réseau",
         "group": 1,
-        "day": "Thursday",
-        "time": "14:00-16:00"
-    },
-    {
-        "professor": "CHEKRY",
-        "module": "Bases  de données",
-        "group": 4,
-        "day": "Thursday",
-        "time": "10:00-12:00"
-    },
-    {
-        "professor": "CHEKRY",
-        "module": "algorithme",
-        "group": 1,
-        "day": "Monday",
-        "time": "16:00-18:00"
-    },
-    {
-        "professor": "BAKKAS",
-        "module": "Structure de données et programmation C avance",
-        "group": 1,
-        "day": "Tuesday",
-        "time": "14:00-16:00"
-    },
-    {
-        "professor": "BAKKAS",
-        "module": "Structure de données et programmation C avance",
-        "group": 2,
-        "day": "Wednesday",
-        "time": "16:00-18:00"
-    },
-    {
-        "professor": "BAKKAS",
-        "module": "Structure de données et programmation C avance",
-        "group": 3,
-        "day": "Thursday",
-        "time": "08:00-10:00"
-    },
-    {
-        "professor": "BAKKAS",
-        "module": "Structure de données et programmation C avance",
-        "group": 4,
-        "day": "Wednesday",
-        "time": "16:00-18:00"
-    },
-    {
-        "professor": "BAKKAS",
-        "module": "Structure de données et programmation C avance",
-        "group": 1,
-        "day": "Tuesday",
-        "time": "08:00-10:00"
-    },
-    {
-        "professor": "BAKKAS",
-        "module": "Structure de données et programmation C avance",
-        "group": 2,
-        "day": "Tuesday",
-        "time": "08:00-10:00"
-    },
-    {
-        "professor": "BAKKAS",
-        "module": "Structure de données et programmation C avance",
-        "group": 3,
-        "day": "Thursday",
-        "time": "08:00-10:00"
-    },
-    {
-        "professor": "BAKKAS",
-        "module": "Structure de données et programmation C avance",
-        "group": 4,
-        "day": "Monday",
-        "time": "10:00-12:00"
-    },
-    {
-        "professor": "BAKKAS",
-        "module": "Structure de données et programmation C avance",
-        "group": 1,
-        "day": "Wednesday",
-        "time": "14:00-16:00"
+        "day": "Lundi",
+        "time": "08:30-10:30",
+        "room": "Amphi"
     },
     {
         "professor": "hourri",
         "module": "Développement web",
         "group": 1,
-        "day": "Monday",
-        "time": "08:00-10:00"
+        "day": "Lundi",
+        "time": "08:30-10:30",
+        "room": "Salle TP"
     },
     {
         "professor": "hourri",
         "module": "Développement web",
         "group": 2,
-        "day": "Thursday",
-        "time": "08:00-10:00"
+        "day": "Lundi",
+        "time": "08:30-10:30",
+        "room": "Salle TP"
     },
     {
         "professor": "hourri",
         "module": "Développement web",
         "group": 3,
-        "day": "Monday",
-        "time": "08:00-10:00"
+        "day": "Lundi",
+        "time": "08:30-10:30",
+        "room": "Salle TP"
     },
     {
         "professor": "hourri",
         "module": "Développement web",
         "group": 1,
-        "day": "Thursday",
-        "time": "16:00-18:00"
+        "day": "Lundi",
+        "time": "08:30-10:30",
+        "room": "Amphi"
     },
     {
         "professor": "hourri",
         "module": "Développement web",
         "group": 2,
-        "day": "Friday",
-        "time": "10:00-12:00"
+        "day": "Lundi",
+        "time": "08:30-10:30",
+        "room": "Amphi"
     },
     {
         "professor": "hourri",
         "module": "Développement web",
         "group": 3,
-        "day": "Monday",
-        "time": "16:00-18:00"
+        "day": "Lundi",
+        "time": "08:30-10:30",
+        "room": "Amphi"
     },
     {
         "professor": "hourri",
         "module": "Développement web",
         "group": 1,
-        "day": "Monday",
-        "time": "16:00-18:00"
-    },
-    {
-        "professor": "ALAOUI FDILI",
-        "module": "Systèmes d’exploitation",
-        "group": 2,
-        "day": "Thursday",
-        "time": "10:00-12:00"
-    },
-    {
-        "professor": "ALAOUI FDILI",
-        "module": "Systèmes d’exploitation",
-        "group": 3,
-        "day": "Wednesday",
-        "time": "16:00-18:00"
-    },
-    {
-        "professor": "ALAOUI FDILI",
-        "module": "Systèmes d’exploitation",
-        "group": 3,
-        "day": "Friday",
-        "time": "14:00-16:00"
-    },
-    {
-        "professor": "ALAOUI FDILI",
-        "module": "Systèmes d’exploitation",
-        "group": 1,
-        "day": "Monday",
-        "time": "14:00-16:00"
-    },
-    {
-        "professor": "Mahfoudi",
-        "module": "Anglais",
-        "group": 3,
-        "day": "Wednesday",
-        "time": "16:00-18:00"
-    },
-    {
-        "professor": "Mahfoudi",
-        "module": "Anglais",
-        "group": 4,
-        "day": "Tuesday",
-        "time": "14:00-16:00"
+        "day": "Lundi",
+        "time": "08:30-10:30",
+        "room": "Salle TP"
     }
 ];
 
